--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,14 +18,7 @@ body{
   display: flex;
   gap: 30px;
 }
-/* .centernav{
-  background-color: black;
-  color: white;
-  border-radius: 50%;
-  padding: 20px;
-  margin-top: -20px;
-  margin-left: -30px;
-} */
+
 .rightnav{
   display: flex;
   gap: 20px;
@@ -153,8 +146,12 @@ body{
 }
 .meImage{
   width: 34%;
+  border-radius: 20px;
 }
-
+.meimg{
+  border-radius: 20px;
+  margin-left: 30px;
+}
 
 .ecl{
   background: repeating-radial-gradient(rgba(0,0,0,0.4) 2px , white 5px, white 100px);
@@ -184,6 +181,7 @@ body{
   display: flex;
   height: 20vh;
   padding: 30px 50px;
+  font-size: 1.1rem;
 }
 .leftfooter ,.centerfooter,.rightfooter{
   width: 33%;
@@ -269,4 +267,53 @@ body{
   color: white;
   padding: 10px 20px;
   border-radius: 10px;
+}
+
+.contact{
+  margin-top: -90px;
+  display: flex;
+  height: 100vh;
+}
+.lcontact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
+  
+}
+.lcontact h1{
+  font-size: 4rem;
+}
+.rcontact{
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+.cvdo{
+  width: 500px;
+  height: 500px;
+}
+.cform{
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.cform input,textarea{
+  border: 2px solid rgba(0, 73, 122, 0.333);
+  padding: 10px 20px;
+  width: 120%;
+  border-radius: 10px;
+}
+.cform button{
+  padding: 10px 20px;
+  background-color: rgb(81, 81, 143);
+  color: white;
+  border-radius: 10px;
+  width: 120%;
 }
