--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,59 +44,68 @@ body{
 .leftnav a:hover:before{
   width: 100%;
 }
+/* Add media queries for responsiveness */
+@media screen and (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .leftnav,
+  .rightnav {
+    margin-top: 20px;
+  }
+  .centernav{
+    display: none;
+  }
+  .rightnav {
+    margin-top: 20px;
+  }
+}
 /*  */
 
-.home{
-  /* padding: 50px 40px; */
-  height: 100vh;
+.home {
+  margin-top: 70px;
+  padding: 50px;
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
-.left{
-  width: 50%;
+
+.left {
+  width: 100%;
+  max-width: 400px; /* Adjust the maximum width based on your design */
+  margin-bottom: 20px;
+}
+
+.right {
+  
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.right{
-  width: 50%;
+
+.right h1 {
+  font-size: 3rem;
 }
-.right h1{
-  font-size: 4rem;
-}
-.marq{
- /* border: 4px solid black; */
- border-radius: 40px;
- background-color: darkcyan;
- color: white;
-  display: flex;
-  gap: 10px;
-}
-.marq2{
-  display: flex;
-  gap: 20px;
-}
-.marq2 h1{
-  font-size: 2rem;
-}
-.mask1 {
-  -webkit-mask-image: url(/splash.webp);
-  mask-image: url(/splash.webp);
-  -webkit-mask-size: 100%;
-  mask-size: 100%;
-  -webkit-mask-repeat: no-repeat;
-  mask-repeat: no-repeat;    
-}
-.para{
-  margin-top: 30px;
+
+.para {
+  margin-top: 20px;
   font-size: 20px;
 }
-.resume{
+
+.resume {
   display: flex;
-  gap: 30px;
+  flex-direction: column;
+  align-items: center;
 }
-.resume a{
+
+.resume a {
   margin-top: 20px;
-  width: 22%;
+  width: 80%;
+  max-width: 200px; /* Adjust the maximum width based on your design */
   display: flex;
   align-items: center;
   gap: 10px;
@@ -107,6 +116,44 @@ body{
   border-radius: 10px;
 }
 
+.marq{
+ /* border-radius: 40px; */
+ /* background-color: darkcyan; */
+ color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.marq2{
+  height: 100px;
+  width: 1250px;
+  display: flex;
+  gap: 20px;
+}
+.marq2 h1{
+  font-size: 3rem;
+}
+.image_wraper{
+  margin: 0px 30px;
+  overflow-x: hidden;
+  gap: 20px;
+}
+.imgSkill{
+  width: 150px;
+  height: 150px;
+  object-fit: contain;
+}
+.mask1 {
+  -webkit-mask-image: url(/splash.webp);
+  mask-image: url(/splash.webp);
+  -webkit-mask-size: 100%;
+  mask-size: 100%;
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;    
+}
+
+/* sab settled ho chuka hai  */
 .external{
   color: white;
 }
@@ -134,6 +181,7 @@ body{
 
 .me{
   display: flex;
+  flex-direction: row;
   margin-top: 50px;
   padding: 10px 50px;
 }
@@ -169,7 +217,34 @@ body{
   border-radius: 20px;
   margin-left: 60px;
 }
-
+@media only screen and (max-width: 768px) {
+  .me{
+    display: flex;
+    flex-direction: column;
+  }
+  .about h1{
+    font-size: 2.5rem;
+    font-weight: 800;
+  }
+  .meleft{
+    width: 100%;
+    margin-top: -20px;
+  }
+  .meleft p{
+    font-size: 1.2rem;
+  }
+  .meright{
+    width: 100%;
+    margin-top: 20px;
+  }
+  .meImage{
+    width: 100%;
+  }
+  .meimg{
+    margin-left: 0;
+    margin-top: 20px;
+  }
+}
 .ecl{
   background: repeating-radial-gradient(rgba(0,0,0,0.4) 2px , white 5px, white 100px);
 }
@@ -182,6 +257,16 @@ body{
   align-items: center;
   margin-bottom: 20px;
 }
+.skills2{
+  display: none;
+  padding: 10px;
+}
+.skills2 h1{
+  margin-top: 50px;
+  font-size: 3rem;
+  font-weight: 600;
+  padding-left: 20px;
+}
 .skills h1{
   font-size: 4rem;
   font-weight: 600;
@@ -191,24 +276,56 @@ body{
   color: white;
   /* z-index: 10; */
 }
-
-.footer{
+@media only screen and (max-width: 768px){
+  .skills{
+    display: none;
+  }
+  .skills2{
+    display: inline;
+  }
+}
+.footer {
   background-color: black;
   color: white;
   display: flex;
-  height: 20vh;
-  padding: 30px 50px;
+  flex-direction: column;
+  padding: 30px 10px;
   font-size: 1.1rem;
 }
-.leftfooter ,.centerfooter,.rightfooter{
-  width: 33%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+
+.leftfooter, .centerfooter, .rightfooter {
+  width: 100%;
+  text-align: center;
+  margin-bottom: 20px;
 }
-.rightfooter{
-  /* display: flex; */
+
+.rightfooter {
+  display: flex;
+  justify-content: center;
   gap: 10px;
+}
+
+@media only screen and (min-width: 600px) {
+  .footer {
+    flex-direction: row;
+    height: 10vh;
+  }
+
+  .leftfooter, .centerfooter, .rightfooter {
+    width: 33%;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .footer {
+    height: 15vh;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .footer {
+    height: 20vh;
+  }
 }
 .tra{
   background-color: rgb(9, 74, 96);
@@ -253,8 +370,37 @@ body{
   align-items: center;
   justify-content: center;
 }
-
-
+@media only screen and (max-width: 768px){
+  .project h3{
+    font-size: 3.4rem;
+  }
+}
+.home1{
+  /* padding: 50px 40px; */
+  height: 100vh;
+  display: flex;
+}
+.left1{
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+@media only screen and (max-width: 768px){
+  .home1{
+    padding-top: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+  .left1{
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+  }
+}
 .primg{
   width: 500px;
   height: 400px;
@@ -273,7 +419,16 @@ body{
   display: flex;
   align-self: flex-start;
 }
-
+@media only screen and (max-width: 768px){
+  .pr_right{
+    width: 100%;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .pr_right h1{
+    font-size: 2.4rem;
+  }
+}
 .show{
   margin-top: 20px;
   display: flex;
@@ -314,27 +469,6 @@ body{
   width: 500px;
   height: 500px;
 }
-/* .cform{
-  margin-top: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-}
-.cform input,textarea{
-  border: 2px solid rgba(0, 73, 122, 0.333);
-  padding: 10px 20px;
-  width: 120%;
-  border-radius: 10px;
-}
-.cform button{
-  padding: 10px 20px;
-  background-color: rgb(81, 81, 143);
-  color: white;
-  border-radius: 10px;
-  width: 120%;
-} */
 
 .lbox , .box2{
   background-color: black;
@@ -354,8 +488,30 @@ body{
   border-radius: 100%;
 }
 .profile{
+  margin-top: -120px;
   border-radius: 100%;
   animation: photoanimation 1.2s infinite ease-in-out alternate;
+}
+@media only screen and (max-width: 768px) {
+  .contact {
+    margin-top: 40px;
+    flex-direction: column;
+  }
+
+  .lcontact {
+    width: 100%;
+  }
+  .lcontact h1{
+    display: flex;
+    flex-direction: row;
+  }
+  .lbox ,.box2{
+    width: 100%;
+    border-radius: 0px;
+  }
+  .rcontact {
+    width: 100%;
+  }
 }
 @keyframes photoanimation{
   to{
